welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
	else if ((((a<0&&b>0)||(a>0&&b<0)))&&negative== true) {
             ^